[tool.poetry]
name = "prox-check"
version = "0.1.0"
description = ""
authors = ["kuj1 <the.same.dentist@gmail.com>"]
readme = "README.md"
packages = [{include = "prox_check"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.3"
asyncio = "^3.4.3"
bs4 = "^0.0.1"
lxml = "^4.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
